# internal/app/rest/api/v1/handler/greet/greet_hello.go
@@ -25,20 +25,20 @@ func (HelloReq) ErrorMessage() map[string]string {
 }
 
 // Hello 示例方法
-// @Router       /greet [get]
+// @Router       /v1/greet [get]
 // @Summary      示例接口
 // @Description  示例接口
 // @Tags         示例
 // @Accept       x-www-form-urlencoded
 // @Produce      json
-// @Param        name  query     string                       true  "名称"  format(string)  default(Tom)
-// @Success      200   {object}  api.Success{data=HelloResp}  "成功响应"
-// @Failure      500   {object}  api.ServerError              "服务器出错"
-// @Failure      400   {object}  api.ClientError              "客户端请求错误（code 类型应为 int，string 仅为了表达多个错误码）"
-// @Failure      401   {object}  api.Unauthorized             "登陆失效"
-// @Failure      403   {object}  api.PermissionDenied         "没有权限"
-// @Failure      404   {object}  api.ResourceNotFound         "资源不存在"
-// @Failure      429   {object}  api.TooManyRequest           "请求过于频繁"
+// @Param        name  query     string                           true  "名称"  format(string)  default(Tom)
+// @Success      200   {object}  example.Success{data=HelloResp}  "成功响应"
+// @Failure      500   {object}  example.ServerError              "服务器出错"
+// @Failure      400   {object}  example.ClientError              "客户端请求错误（code 类型应为 int，string 仅为了表达多个错误码）"
+// @Failure      401   {object}  example.Unauthorized             "登陆失效"
+// @Failure      403   {object}  example.PermissionDenied         "没有权限"
+// @Failure      404   {object}  example.ResourceNotFound         "资源不存在"
+// @Failure      429   {object}  example.TooManyRequest           "请求过于频繁"
 func (h *handler) Hello(ctx *gin.Context) {
 	req := new(HelloReq)
 	if err := bindx.ShouldBindQuery(ctx, req); err != nil {
